# sumrak-vpn

./: .env.example  .env.staging.example  Dockerfile  README.md  compose.staging.yaml  compose.yaml  pyproject.toml
alembic/versions/: 20260610_01_product_features.py  20260610_02_multi_server.py  20260611_01_xhttp_transport.py  20260611_02_xhttp_default.py  20260611_03_remote_config.py  20260611_04_node_agent.py  20260612_01_pq_xhttp.py  20260612_02_telegram_proxy.py
app/: admin.py  bot.py  config.py  main.py  models.py  node.py  node_agent_runtime.py  nodes.py  services.py  staging.py  telegram_proxy.py  telegram_proxy_agent_runtime.py  vpn.py  webapp.py
app/static/: webapp.css  webapp.js
app/templates/: base.html  broadcast.html  server.html  servers.html  telegram_proxies.html  telegram_proxy.html  telegram_proxy_install.html  user.html  webapp.html
deploy/: setup-staging-xray.sh  setup-wireguard.sh  setup-xray.sh
deploy/node/: Dockerfile.agent
deploy/telegram-proxy/: Dockerfile.agent  docker-compose.yaml  install.sh
deploy/xray/: config.example.json
outputs/sumrak-vpn-ux-referrals-latest/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
outputs/vpn-service-mvp/: .env.example  .gitignore  Dockerfile  README.md  (+1 more)
outputs/vpn-service-vless-reality-latest/: .env.example  .gitignore  Dockerfile  pyproject.toml
outputs/vpn-service-vless-reality-latest/app/: __init__.py  admin.py  config.py  db.py
tests/: test_multi_server.py  test_node.py  test_services.py  test_telegram_proxy.py  test_vpn.py  test_webapp.py
(+25 files in other folders)
