[project]
name = "vpn-service"
version = "0.1.0"
description = "Telegram-managed VPN service with an admin panel"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

